# account-balance-calculator

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: account_manager.rs  common.rs  error.rs  lib.rs  main.rs
src/tests/: account_manager_tests.rs  integration_tests.rs  mod.rs
src/tests/data/: generated_sample_input.csv
